# ymnab

./: .env.example  Cargo.toml  Dockerfile  compose.yml
.github/workflows/: test.yml
migrations/: 20240131150419_users.sql  20240219144545_accounts.sql
src/: app.rs  db.rs  handlers.rs  helpers.rs  main.rs  views.rs
